Add business name to header.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo">Business Name</div>
+            <div class="logo">West Customization</div>
             <div class="nav-controls">
                 <div class="nav-links">
                     <a href="#home">Home</a>
