--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>Business Name</h3>
+                <h3>West Customization</h3>
                 <p>Your trusted partner in success</p>
             </div>
             <div class="footer-section">
@@ -126,7 +126,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Business Name. All rights reserved.</p>
+            <p>&copy; 2024 West Customization. All rights reserved.</p>
         </div>
     </footer>
 
