--- a/index.html
+++ b/index.html
@@ -32,12 +32,17 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Welcome to West Laser Customization</h1>
-            <p>Your one stop shop for all your engraving and customization needs. 
-            Whether it be metal, wood, or a hockey puck, we got you covered.
-            Have a look below to see some of our work. If you like what you see then 
-            please reach out to us with some details about your project and we can 
-            get started on bringing your vision to life.</p>
+            <div class="hero-title">
+                <h1>Welcome to</h1>
+                <h1>West Laser Customization</h1>
+            </div>
+            <div class="hero-description">
+                <p>Your one stop shop for all your engraving and customization needs. 
+                Whether it be metal, wood, or a hockey puck, we got you covered.
+                Have a look below to see some of our work. If you like what you see then 
+                please reach out to us with some details about your project and we can 
+                get started on bringing your vision to life.</p>
+            </div>
             <a href="#contact" class="cta-button">Get Started</a>
         </div>
     </section>
