--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>West Customization</h3>
+                <h3>West Laser Customization</h3>
                 <p>Your trusted partner in success</p>
             </div>
             <div class="footer-section">
@@ -135,7 +135,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 West Customization. All rights reserved.</p>
+            <p>&copy; 2024 West Laser Customization. All rights reserved.</p>
         </div>
     </footer>
 
