Add images to images/gallery.

--- a/index.html
+++ b/index.html
@@ -78,16 +78,22 @@
         <h2>Our Work</h2>
         <div class="gallery-grid">
             <div class="gallery-item">
-                <img src="https://picsum.photos/400/300" alt="Project 1">
+                <img src="images/gallery/handcuffs.jpg" alt="Custom engraved handcuffs with intricate scroll pattern">
             </div>
             <div class="gallery-item">
-                <img src="https://picsum.photos/400/301" alt="Project 2">
+                <img src="images/gallery/rifle-engraving.jpg" alt="Detailed scroll pattern engraving on rifle">
             </div>
             <div class="gallery-item">
-                <img src="https://picsum.photos/400/302" alt="Project 3">
+                <img src="images/gallery/slate-coasters.jpg" alt="Personalized slate coasters with elegant text design">
             </div>
             <div class="gallery-item">
-                <img src="https://picsum.photos/400/303" alt="Project 4">
+                <img src="images/gallery/hockey-puck.jpg" alt="Custom engraved hockey puck - Rucks 2 Pucks 2024">
+            </div>
+            <div class="gallery-item">
+                <img src="images/gallery/bottle-opener.jpg" alt="Custom engraved bottle opener - Hamma Time">
+            </div>
+            <div class="gallery-item">
+                <img src="images/gallery/military-knife.jpg" alt="Military service knife with branch insignias">
             </div>
         </div>
     </section>
