--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="hero-description">
                 <p>Your one stop shop for all your engraving and customization needs. 
-                Whether it be metal, wood, or a hockey puck, we got you covered.
+                Whether it be metal, wood, or stone, we got you covered.
                 Have a look below to see some of our work. If you like what you see then 
                 please reach out to us with some details about your project and we can 
                 get started on bringing your vision to life.</p>
@@ -51,24 +51,29 @@
         <h2>About Us</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>We are dedicated to delivering high-quality solutions for our clients. Our team of experts works tirelessly to ensure your satisfaction.</p>
-                <p>With years of experience in the industry, we understand what it takes to succeed in today's competitive market.</p>
+                <p>We are a US based, veteran owned and operated, business. Our goal is to provide you with the 
+                    best possible service and products for your engraving and customization needs. 
+                    Why choose us?
+                </p>
             </div>
             <div class="about-features">
                 <div class="feature">
                     <i class="fas fa-check-circle"></i>
                     <h3>Quality Service</h3>
-                    <p>We maintain the highest standards in everything we do.</p>
+                    <p>We maintain the highest standards in everything we do. 
+                    We use the latest in engraving technology to ensure your project is done right.</p>
                 </div>
                 <div class="feature">
                     <i class="fas fa-clock"></i>
-                    <h3>Timely Delivery</h3>
-                    <p>We respect deadlines and deliver on time.</p>
+                    <h3>Slow is smooth, smooth is fast</h3>
+                    <p>We respect deadlines and will work with you to get your project done on time, 
+                    without sacrificing quality.
+                    </p>
                 </div>
                 <div class="feature">
                     <i class="fas fa-handshake"></i>
-                    <h3>Customer Support</h3>
-                    <p>24/7 support to address your concerns.</p>
+                    <h3>Customer Satisfaction</h3>
+                    <p>Have a question? We're here to help. We'll work with you to ensure your project is exactly what you want.</p>
                 </div>
             </div>
         </div>
