Update contact info in footer.

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
             </div>
             <div class="footer-section">
                 <h3>Contact Info</h3>
-                <p>Email: info@business.com</p>
-                <p>Phone: (555) 123-4567</p>
+                <p>Email: westlasercustomization@gmail.com</p>
+                <p>Phone: (617) 312-7401</p>
             </div>
             <div class="footer-section">
                 <h3>Follow Us</h3>
