New logo folder in images for header logo.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo">West Laser Customization</div>
+            <div class="logo">
+                <img src="images/logo/logo.png" alt="West Laser Customization Logo" class="logo-img">
+                <span>West Laser Customization</span>
+            </div>
             <div class="nav-controls">
                 <div class="nav-links">
                     <a href="#home">Home</a>
