Add a lightbox for viewing gallery items.

--- a/index.html
+++ b/index.html
@@ -159,5 +159,13 @@
     </footer>
 
     <script type="module" src="/main.js"></script>
+
+    <!-- Lightbox -->
+    <div class="lightbox" id="lightbox">
+        <span class="close-lightbox">&times;</span>
+        <span class="prev-image">&lt;</span>
+        <span class="next-image">&gt;</span>
+        <img src="" alt="" class="lightbox-image">
+    </div>
 </body>
 </html> 
