--- a/index.html
+++ b/index.html
@@ -113,6 +113,17 @@
 
     <section id="contact" class="contact">
         <h2>Contact Us</h2>
+        <div class="guidelines-container">
+            <h3>What to Include in Your Message</h3>
+            <ul>
+                <li>Type of item you want to customize</li>
+                <li>Material of the item (metal, wood, stone, etc.)</li>
+                <li>Desired design or text</li>
+                <li>Any specific dimensions or size requirements</li>
+                <li>Preferred timeline for completion</li>
+                <li>Any reference images or examples</li>
+            </ul>
+        </div>
         <div class="contact-container">
             <form id="contact-form">
                 <div class="form-group">
@@ -126,6 +137,14 @@
                 <div class="form-group">
                     <label for="message">Message</label>
                     <textarea id="message" name="message" required></textarea>
+                </div>
+                <div class="form-group file-upload">
+                    <label for="attachments" class="file-label">
+                        <i class="fas fa-paperclip"></i>
+                        <span>Attach Files (Optional)</span>
+                    </label>
+                    <input type="file" id="attachments" name="attachments" multiple accept="image/*,.pdf,.ai,.eps">
+                    <div class="file-list"></div>
                 </div>
                 <button type="submit" class="submit-button">Send Message</button>
             </form>
