Add file counter to file upload.

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                     <label for="attachments" class="file-label">
                         <i class="fas fa-paperclip"></i>
                         <span>Attach Files (Optional)</span>
+                        <span class="file-counter">0/8 files</span>
                     </label>
                     <input type="file" id="attachments" name="attachments" multiple accept="image/*,.pdf,.ai,.eps">
                     <div class="file-list"></div>
