Correct email and change color of welcome text.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </div>
             <div class="footer-section">
                 <h3>Contact Info</h3>
-                <p>Email: westlasercustomization@gmail.com</p>
+                <p>Email: westcustomization@gmail.com</p>
                 <p>Phone: (617) 312-7401</p>
             </div>
             <div class="footer-section">
