Change Home section design.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </header>
 
     <section id="home" class="hero">
+        <div class="hero-accent"></div>
         <div class="hero-content">
             <div class="hero-left">
                 <div class="hero-title">
