--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="contact-container">
             <form id="contact-form" action="https://api.web3forms.com/submit" method="POST" enctype="multipart/form-data">
                 <!-- Add Web3Forms access key -->
-                <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE">
+                <input type="hidden" name="access_key" value="85ded4ac-901d-4298-afc8-f5e621665800">
                 
                 <!-- Optional but recommended: Add subject and from name -->
                 <input type="hidden" name="subject" value="New Project Inquiry - West Laser Customization">
@@ -174,15 +174,6 @@
                 <h3>Contact Info</h3>
                 <p>Email: westcustomization@gmail.com</p>
                 <p>Phone: (617) 312-7401</p>
-            </div>
-            <div class="footer-section">
-                <h3>Follow Us</h3>
-                <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                </div>
             </div>
         </div>
         <div class="footer-bottom">
