Add action back to form.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </ul>
         </div>
         <div class="contact-container">
-            <form id="contact-form" action="https://api.web3forms.com/submit" method="POST" enctype="multipart/form-data">
+            <form id="contact-form" action="https://api.web3forms.com/submit" method="POST">
                 <!-- Add Web3Forms access key -->
                 <input type="hidden" name="access_key" value="85ded4ac-901d-4298-afc8-f5e621665800">
                 
@@ -172,7 +172,7 @@
         </div>
     </footer>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="main.js"></script>
 
     <!-- Lightbox -->
     <div class="lightbox" id="lightbox">
