--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business Landing Page</title>
+    <title>West Laser Customization</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -137,7 +137,6 @@
                 
                 <!-- Spam protection -->
                 <input type="checkbox" name="botcheck" style="display: none;">
-                <input type="hidden" name="redirect" value="https://web3forms.com/success">
                 
                 <!-- Your existing form fields -->
                 <div class="form-group">
