New image in gallery.

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
         <h2>Our Work</h2>
         <div class="gallery-grid">
             <div class="gallery-item">
+                <img src="images/gallery/gucci.jpg" alt="Upscale gun design">
+            </div>
+            <div class="gallery-item">
                 <img src="images/gallery/handcuffs.jpg" alt="Custom engraved handcuffs with intricate scroll pattern">
             </div>
             <div class="gallery-item">
